// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/app/translate/extract.json 01 1`] = `Array []`;

exports[`lib/riw/app/translate/extract.json 02 1`] = `Array []`;

exports[`lib/riw/app/translate/extract.json 03 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "file": "/fixtures/dir/a.json",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "a.1 again!",
    "file": "/fixtures/dir/aa.json",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "b.1!",
    "file": "/fixtures/dir/b.json",
    "id": "b.1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/dir/b.json",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "b.3!",
    "description": Object {
      "abc": "def",
      "foo": "bar",
    },
    "file": "/fixtures/dir/b.json",
    "id": "b.3",
  },
  Object {
    "defaultMessage": "b.2 again!",
    "description": "b.2 again desc",
    "file": "/fixtures/dir/bb.json",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "c.1!",
    "file": "/fixtures/dir/c.json",
    "id": "c.1",
  },
]
`;

exports[`lib/riw/app/translate/extract.json 04 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "file": "/fixtures/dir/a.json",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "a.1 again!",
    "file": "/fixtures/dir/aa.json",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "b.1!",
    "file": "/fixtures/dir/b.json",
    "id": "b.1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/dir/b.json",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "b.2 again!",
    "description": "b.2 again desc",
    "file": "/fixtures/dir/bb.json",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "c.1!",
    "file": "/fixtures/dir/c.json",
    "id": "c.1",
  },
]
`;
